--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,1 +1,34 @@
 @import "tailwindcss";
+
+@layer components{
+    .Navbar{
+        @apply w-full box-border px-[4%] sm:px-[8%] flex justify-between items-center h-auto;
+    }
+    .linkanimate
+    {
+        @apply transition-all  duration-100 ease-in-out sm:scale-[1] underline underline-offset-10 ;
+    }
+    .navlinkmobile
+    {
+        @apply w-full h-[55px] flex items-center box-border px-5;
+    }
+    .linkanimate2 {
+        @apply transition-all  duration-0 ease-in active:bg-green-800;
+    }
+    .btn1{
+        @apply bg-gradient-to-r from-lime-600 to-green-800 rounded-[5px] py-[2%] hover:opacity-[0.9] px-[5%] text-white cursor-pointer active:scale-[0.95] transition-all  ;
+     }
+     .btn2{
+        @apply border-[1px] border-solid border-white rounded-l-full rounded-r-full py-[2%] hover:opacity-[0.9] px-[0.8rem] text-white cursor-pointer active:scale-[0.95] transition-all  ;
+     }
+     .heading{
+        @apply text-[2.3rem] md:text-[2rem] lg:text-4xl font-[800] text-lime-700 ;
+     }
+     .subheading
+     {
+        @apply md:text-[0.7rem] lg:text-[1rem] font-[600] ;
+     }
+     .paratext{
+        @apply text-justify text-[0.9rem] text-zinc-500;
+     }
+}
