--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -21,6 +21,9 @@
      .btn2{
         @apply border-[1px] border-solid border-white rounded-l-full rounded-r-full py-[2%] hover:opacity-[0.9] px-[0.8rem] text-white cursor-pointer active:scale-[0.95] transition-all  ;
      }
+     .btn3{
+        @apply border-[2px] border-solid font-bold border-black rounded-[10px] py-[0.5rem] hover:opacity-[0.9] px-[0.8rem] text-black cursor-pointer active:scale-[0.95] transition-all  ;
+     }
      .heading{
         @apply text-[2.3rem] md:text-[2rem] lg:text-4xl font-[800] text-lime-700 ;
      }
