--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -40,4 +40,8 @@
      .iconanimate{
       @apply hover:scale-[0.95] active:scale-[0.95] hover:opacity-[0.8] cursor-pointer;
      }
+     .inputbox
+     {
+      @apply w-full box-border outline-none py-2 px-5 border-solid border-[2px] rounded-[10px] border-white focus:border-green-700 focus:placeholder-green-700 bg-white;
+     }
 }
